--- a/Project/index.css
+++ b/Project/index.css
@@ -6,30 +6,39 @@
   --text-color: #696a6f;
 }
 
-
-
-body{min-height:700vh;}
-.navbar-default{
-  transition:500ms ease;
-  background:transparent;
-  
+body {
+  min-height: 700vh;
 }
-  .navbar-default.scrolled .top_header{
-    background: linear-gradient(104.79deg, #051C81 0%,#000080 100%);
-    opacity: 0.9;
-  }
-  .navbar-default.scrolled .sec-header{
-    width: 100%;
-    /* background: linear-gradient(104.79deg, #051C81 0%,rgba(0, 0, 0, 0.1) 100%); */
-    background:#000080;
-    backdrop-filter: blur(10px);
-    opacity: 0.9;
+.navbar-default {
+  transition: 500ms ease;
+  background: transparent;
 }
-    
 
+.navbar-default.scrolled .top_header {
+  display: none;
+}
+.navbar-default.scrolled .sec-header {
+  width: 100%;
+  background: #000080;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+.navbar-default.scrolled .sec-header .nav-btn {
+  background-color: #00aeef;
+}
+.navbar-default.scrolled .banner,
+.banner-img {
+  margin-top: 1180px;
+}
+
+.navbar-default.scrolled .banner_box {
+  height: 762px;
+}
 
 .main-conatiner {
-  height: 762px;
+  background: linear-gradient(104.79deg, #051c81 0%, #430882 90%);
+  
 }
 .nav-btn {
   backdrop-filter: blur(2px);
@@ -63,7 +72,6 @@ body{min-height:700vh;}
   color: #ede8ff;
 }
 .middle {
-  
 }
 .menu-ul {
   padding: 0px;
@@ -71,7 +79,8 @@ body{min-height:700vh;}
   margin-bottom: 0px !important;
 }
 .top_header {
-  background: rgba(11, 11, 11, 0.2);
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
 }
 .top-menu-content {
   display: flex;
@@ -96,17 +105,22 @@ body{min-height:700vh;}
 .sec-header {
   background: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(2px);
+  height: 60px;
+  top: 49.5px;
 }
 .banner_box {
-  height: 762px;
+  height: 662px;
   padding: 19px 0px 131px 0px;
   background: linear-gradient(104.79deg, #051c81 0%, #430882 100%);
 }
-.banner{
- }
-.banner img{
+
+.banner-img {
   margin-top: 79px;
-  margin-bottom: 131px;
+  /* margin-bottom: 101px; */
+}
+.banner img {
+  /* margin-top: 79px; */
+  margin-bottom: 101px;
 
   width: 660px;
 }
@@ -120,8 +134,6 @@ body{min-height:700vh;}
   color: #ffffff;
   margin-bottom: 24px;
   margin-top: 50px;
- 
-
 }
 .banner_box p {
   font-family: var(--inter-font);
@@ -136,6 +148,10 @@ body{min-height:700vh;}
 }
 .our-services {
   padding: 74px 0px;
+  /* margin-top: 74px; */
+}
+.service_nav{
+  padding: 94px 115px;
 }
 .our-services h3 {
   font-family: var(--sora-font);
@@ -161,12 +177,8 @@ body{min-height:700vh;}
   height: 100%;
   width: 100%;
   border: 1px solid #f3f3f3;
-  
-  /* Shadow */
-
   box-shadow: 2px 2px 15px rgba(188, 188, 188, 0.2);
   border-radius: 6px;
-  /* margin-left: 20px; */
 }
 .services-card .card .first-service {
   margin-left: 0px !important;
@@ -177,13 +189,36 @@ body{min-height:700vh;}
 .first-service {
   background-color: #23c3ff;
 }
-.services-card .first-service .card-body h3 {
-  color: #ffffff;
+
+.services-card-all {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding: 0px;
+  gap: 20px;
 }
-.services-card .first-service .card-body p {
-  color: #ffffff;
+
+.services {
+
 }
-.services-card .card-body h3 {
+.services .card1 {
+  padding: 16px;
+  gap: 24px;
+  width: 287.5px;
+  height: 332px;
+  border: 1px solid #f3f3f3;
+  box-shadow: 2px 2px 15px rgba(188, 188, 188, 0.2);
+  border-radius: 6px;
+}
+.services-card-all .services:hover {
+  background-color: #23c3ff;
+  color: white;
+}
+.services-card-all .services .card1:hover {
+  color: white;
+}
+
+.services-card-all .services .card1 h3 {
   color: var(--secondary-color);
   font-style: normal;
   font-weight: 700;
@@ -196,26 +231,18 @@ body{min-height:700vh;}
   margin-bottom: 24px;
   padding-bottom: 0px;
 }
-.services-card .card-body p {
-  color: var(--text-color);
-  font-family: var(--inter-font);
+.services-card-all .services .card1 p {
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-  margin-bottom: 0px;
+  color: #696a6f;
+  margin-top: 34.94px;
+  margin-bottom: 24px;
+  padding-bottom: 0px;
 }
-.services-card .row1{
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  margin-left: 30px;
-  color: #696A6F;
-}
-.services-card .row1 .col-md-3 {
-  margin: 0px !important;
-  padding: 0px !important;
-}
+
 .about-us {
   background-color: #363c55;
 }
@@ -312,20 +339,18 @@ body{min-height:700vh;}
   margin-top: 16px;
   margin-bottom: 40px;
   letter-spacing: -0.015em;
-  
+
   /* Base/120 */
-  
-  color: #1E1F27;
+
+  color: #1e1f27;
 }
 .technologies .top-images {
   display: flex;
-flex-wrap: wrap;
-justify-content: center;
-gap: 20px;
- 
- 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
-.technologies .top-images img{
+.technologies .top-images img {
   width: 168px;
   height: 168px;
 }
@@ -333,9 +358,8 @@ gap: 20px;
   margin-left: 10px;
 } */
 
-.team_card
-{
-  border: 1px solid #F3F3F3;
+.team_card {
+  border: 1px solid #f3f3f3;
   border-radius: 6px;
 }
 .down-images {
@@ -344,14 +368,12 @@ gap: 20px;
   padding: 0px;
 }
 .img-down {
-  
   box-shadow: 2px 2px 15px rgba(188, 188, 188, 0.2);
   width: 168px;
-height: 168px;
+  height: 168px;
 }
 
 .people-say-container {
-
 }
 .people-say-container .container h4 {
   font-style: normal;
@@ -366,468 +388,155 @@ height: 168px;
 .people-say-container .container .container-p {
   font-family: var(--inter-font);
   font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-  color: #1E1F27 !important;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #1e1f27 !important;
   padding-bottom: 0px;
   margin-bottom: 40px !important;
   margin-top: 12px;
-  
- 
-}
-.people-say-card .row1{
- display: flex;
- justify-content:flex-start;
- gap: 40px;
- flex: none;
-order: 1;
-align-self: stretch;
-flex-grow: 0;
-  
- 
-}
-.people-say-card .row1 .col-md-4{
-  border: 1px solid #CCD9F5;
-  margin-bottom: 94px;
- width: 376.67px;
-height: 390px;
-  padding: 0px 20px;
-  
- 
 }
 
-.people-say-container .container .row1 .col-md-4 #p{
-  height: 190px;
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-color: #696A6F;
-
-}
-
-.people-say-card img {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-.people-say-card .small-card {
+.people-say-card {
   display: flex;
-  justify-content: left;
-  align-items: center;
-  position: relative;
-  bottom: 25px;
- 
-  
+  gap: 40px;
 }
+.people-say-card .mini-container {
+  box-sizing: border-box;
+  padding: 20px;
+  border: 1px solid #ccd9f5;
+  background: #ffffff;
+  gap: 10px;
 
-
-.people-say-card .small-card .logo-card img{
-  width: 80px;
-  height: 80px;
-  border-radius: 100%;
+  width: 376.67px;
+  height: 390px;
 }
-
-.people-say-card .small-card h6 {
-  font-family: var(--inter-font);
+.people-say-card .mini-container #p {
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
   color: #696a6f;
-  margin-bottom: 0px;
+  height: 190px;
+  width: 336.67px;
+  margin-top: 10px;
 }
-.information{
-  margin-left: 10px;
-  /* margin-top: 15px; */
- 
-}
-.information h5{
-  color: #696A6F;;
-  font-family: var(--inter-font);
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 24px;
-font-variation-settings: 'slnt' 0;
-margin-bottom: 0px;
-}
-.information p{
-  color: #696A6F;;
-  font-family: var(--inter-font);
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  color: #696A6F;
-  margin-bottom: 0px;
-}
-.footer-main-container {
-  /* width: 100vw; */
-  height: 458px;
-  flex-direction: column;
-align-items: flex-start;
-padding: 94px 115px;
-  background-color: #333333;
-  color: #ffffff;
+.small-card {
+  display: flex;
 }
 
-
-.footer-main{
-  background: #333333;
-  color: white;
+.information {
+  margin-left: 10px !important;
+  width: 266.67px;
+  height: 46px;
 }
-
-.container .foot-container{
-display: flex;
-gap: 40px;
-}
-.container .foot-container .footer-card{
-  width: 272.5px;
-  height: 130px;
-  /* border: 1px solid black; */
+.information .span1 {
+  margin: 0px;
   padding: 0px;
-  gap: 10px;
-  width: 272.5px;
-  height: 108px;
-}
-.container .foot-container .footer-card h6{
-  font-family: var(--inter-font);
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 32px;
-  align-self: stretch;
-  color: #FFFFFF;
-}
-.container .foot-container .footer-card p{
-  font-family: var(--inter-font);
- 
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-  align-self: stretch;
-  color: #F0F0F1;
-}
-.container .foot-container .footer-card input{
-  background: #FFFFFF;
-  border: 2px solid #EBEBEC;
-  border-radius: 6px 0px 0px 6px;
-  padding: 8px 16px;
-  width: 200.5px;
-  height: 40px;
-  border-right: none;
-}
-.container .foot-container .footer-card button{
-  background: #00AEEF;
-  padding: 8px 16px;
-  line-height: 24px;
-  color: #FFFFFF;
-font-variation-settings: 'slnt' 0;
-border-left: none;
-position: relative;
-bottom: 1px;
-
-
-}
-.container .foot-container .footer-card .footer-search{
-display: flex;  
-}
-
-.footer-main-container hr{
-  margin-top: 115px;
-}
-
-
-
-.get-in-touch .get-in-touch-info{
-  background-color: none;
-  color: var(--secondary-color);
- margin-bottom: 20px;
-
-}
-.get-in-touch-container{
-
-  padding-bottom: 80px;
-}
-.get-in-touch .get-in-touch-container .row {
-  box-shadow: 2px 2px 15px rgba(188, 188, 188, 0.2);
-  border-radius: 6px;
- padding-bottom: 50px;
- padding: 50px;
-
-
-
-}
-.get-in-touch .get-in-touch-container .row .col-md-6{
-display: flex;
-
-}
-
-.get-in-touch .get-in-touch-container .row .col-md-6 img{
-  width: 390.8px;
-  height: 372px;
-  margin-left: 80px;
-
-
-
-}
-
-.get-in-touch .container h4{
-  font-family: var(--sora-font);
+  font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  font-size: 32px;
-  line-height: 40px;
-  margin-top: 94px;
-  color: #05060F;
-
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.015em;
+  color: #696a6f;
+  font-variation-settings: "slnt" 0;
 }
-
-
-.right-inputes{
-  display: flex;
-  flex-direction: column;
-  justify-content: right;
-  position: relative;
-  top: 0;
-
-}
-.right-inputes input{
- margin-bottom: 24px;
- width: 543px;
-  height: 52px;
-
-background: #F3F3F3;
-border: 2px solid #EBEBEC;
-border-radius: 6px;
-}
-.right-inputes .large-input{
- width: 543px;
-background: #F3F3F3;
-border: 2px solid #EBEBEC;
-border-radius: 6px;
-}
-.btn-div{
-  text-align: right;
-  margin-top: 40px;
-}
-.right-inputes button{
-  width: 103px;
-  /* height: 40px; */
-  border-radius: 4px;
-  padding: 12px 24px;
-  margin-bottom: 50px;
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 24px
-
-
-  
-}
-.get-in-touch .top-menu-content {
-background-color: white;
-}
-.get-in-touch .top-menu-content span {
-  font-family: 'Inter';
+.information .span2 {
+  margin-bottom: 10px;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 22px;
-margin-left: 12px;
-  color: #696A6F;
+  color: #696a6f;
 }
-.right-inputes .large-input{
-   
-  width: 543px;
- height: 144px;
- 
- background: #F3F3F3;
- border: 2px solid #EBEBEC;
- border-radius: 6px;
- }
+.small-card img {
+  width: 60px;
+  height: 60px;
+}
 
- .footer-lower-container{
+
+.tabs {
   display: flex;
-  justify-content:space-between;
-  gap: 15px;
-  margin-top: 40px !important;
-}
-.footer-lower-container p{
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-letter-spacing: -0.015em;
-color: #F3F3F3;
-}
 
-.container .foot-container .footer-card .footer-search input{
-  width: 208.5px;
-  height: 40px;
-}
-
-.container .foot-container .footer-card button{
-  background: #00AEEF;
-  border-radius: 0px 6px 6px 0px;
-  padding: 8px 16px;
-  line-height: 24px;
-  color: #FFFFFF;
-font-variation-settings: 'slnt' 0;
-
-border-left: none;
-position: relative;
-bottom: 2px;
-
-
-}
-
-.container .foot-container .footer-card input{
-  background: #FFFFFF;
-  border: 2px solid #EBEBEC;
-  border-radius: 6px 0px 0px 6px;
-  padding: 8px 16px;
-  width: 200.5px;
-  height: 40px;
-  border-right: none;
-}
-.container .foot-container .footer-card button{
-  background: #00AEEF;
-  padding: 8px 16px;
-  line-height: 24px;
-  color: #FFFFFF;
-font-variation-settings: 'slnt' 0;
-border-left: none;
-position: relative;
-bottom: 1px;
-}
-.container .foot-container .footer-card .footer-search{
-display: flex;
-}
-
-.footer_btn{
-  border: none !important;
-  background: #00AEEF !important;
-border-radius: 0px 6px 6px 0px !important;
-/* padding: 12px !important; */
-width: 64px !important;
-height: 40px !important;
-margin-top: 1px;
-
-}
-
-.footer_inp{
-width: 208.5px !important;
-height: 40px !important;
-background: #FFFFFF;
-border: 2px solid #EBEBEC;
-border-radius: 6px 0px 0px 6px;
-}
-
-.form_btn{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background: #00AEEF !important;
-border-radius: 4px !important;
-padding: 12px 24px;
-width: 103px;
-height: 40px;
-
-}
-
-
-
-
-
-
-.btn-div{
-  display: flex;
-  justify-content: right;
-}
-
-.footer-card p a{
-  text-decoration: none;
-  font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-color: #F0F0F1;
-}
-
-.tabs{
-  display: flex;
-  /* justify-content:space-around; */
-  /* align-items: flex-start; */
-  /* border: 2px solid; */
   margin-bottom: 40px;
 }
-.tabs li{
-width: 270.5px;
-display: flex;
-flex-direction: column;
-align-items: center;
-
+.tabs li {
+  width: 270.5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.tabs li a{
+.tabs li a {
   /* text-decoration: none !important; */
   border: none !important;
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 27px;
-color: #ACACAF;
-  
-  
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #acacaf;
 }
-.nav-tabs .nav-link:hover{
-  color: #23C3FF;
+.nav-tabs .nav-link:hover {
+  color: #23c3ff;
 }
-.nav-tabs .nav-link.active{
+.nav-tabs .nav-link.active {
   /* border-color: #dee2e6 #dee2e6 #23C3FF #fff !important; */
-  border-bottom: 1px solid #23C3FF !important;
+  border-bottom: 1px solid #23c3ff !important;
   width: 300px;
   text-align: center;
-  color: #23C3FF !important;
-  
+  color: #23c3ff !important;
 }
-.nav-tabs{
+.nav-tabs {
   border: none;
 }
-.nav-tabs .nav-item{
+.nav-tabs .nav-item {
   border-bottom: 1px solid #dee2e6 !important;
-
 }
 
-.count-textarea{
+.count-textarea {
   position: absolute;
   right: 10px;
   top: 340px;
- 
 }
-textarea{
+textarea {
   resize: none;
 }
 /* tech */
 
-.technologies .heading{
-font-weight: 700;
-font-size: 32px;
-line-height: 40px;
-font-family: var(--sora-font);
-}
-.people-say-container h3{
+.technologies .heading {
   font-weight: 700;
-font-size: 32px;
-line-height: 40px;
-font-family: var(--sora-font);
+  font-size: 32px;
+  line-height: 40px;
+  font-family: var(--sora-font);
+}
+.people-say-container h3 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 40px;
+  font-family: var(--sora-font);
+  color: #05060f;
+}
 
-color: #05060F;
+
+.card1:hover h3{
+color: #fff !important;
+  
+}
+.card1:hover p{
+color: #fff !important;
+  
+}
+
+
+#svg{
+  fill: #05060f !important;
+
+}
+
+.card1:hover #svg{
+fill: white !important;
+transition: ease-in 0.2s all;
 }
